# elysium-descent

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOJO_INTEGRATION_GUIDE.md  README.md  Scarb.toml
.claude/: settings.local.json
.claude/commands/: architect-mode.md  collabate-on-plan.md  documentation.md  dojo.md
.github/workflows/: ci.yml  test-contract.yaml
client/: Cargo.toml
client/.cargo/: config.toml
client/.claude/: settings.local.json
client/AI_DOCS/: Bevy.md
client/assets/dialogue/: books.yarn
client/assets/models/: bk2_person.glb  person.glb
client/docs/: issue.md
client/src/: audio.rs  keybinding.rs  main.rs
client/src/constants/: animations.rs  collectibles.rs  dojo.rs  mod.rs  movement.rs
client/src/game/: components.rs
client/src/rendering/cameras/: mod.rs  player_camera.rs
client/src/resources/: assets.rs
client/src/resources/audio/: sfx.rs
client/src/screens/: fight.rs  gameplay.rs  loading.rs  main_menu.rs  mod.rs  pregame_loading.rs  settings.rs
client/src/systems/: book_interaction.rs  character_controller.rs  collectibles.rs  collectibles_config.rs  dialogue_view.rs  dialogue_view.rs.backup  enemy_ai.rs  mod.rs  objectives.rs
client/src/systems/dojo/: create_game.rs  mod.rs  pickup_item.rs
client/src/systems/inventory/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
client/src/ui/: dialog.rs  inventory.rs  modal.rs  styles.rs  widgets.rs
contracts/: ARCHITECTURE_NOTES.md  CLAUDE.md  INTEGRATION_GUIDE.md  README.md  Scarb.toml  architecture-diagram.md  dojo_dev.toml  dojo_slot.toml  manifest_dev.json  manifest_slot.json
contracts/AI_DOCS/: CAIRO_ADVANCED_PATTERNS.md  COMPREHENSIVE_TESTING_IN_DOJO.md  DOJO_ADVANCED_PATTERNS.md  DOJO_ARCHITECTURE_RESEARCH.md  SHINIGAMI.md  Shinigami.md  comprehensive-testing-in-dojo.md
contracts/src/: interfaces.cairo  lib.cairo
contracts/src/components/: countable.cairo  game.cairo  game_component.cairo  inventory.cairo  inventory_component.cairo  lootable.cairo
contracts/src/constants/: world.cairo
contracts/src/elements/: base.cairo  factory.cairo
contracts/src/elements/items/: book.cairo  health_potion.cairo  survival_kit.cairo  teleport_scroll.cairo
contracts/src/helpers/: mod.cairo  store.cairo
contracts/src/models/: config.cairo  game.cairo  game_counter.cairo  index.cairo  inventory.cairo  loot.cairo  loot_box.cairo  mod.cairo  player.cairo  world_state.cairo
contracts/src/systems/: actions.cairo  elysium_descent.cairo  elysium_dungeon.cairo
contracts/src/systems/game/: contracts.cairo
contracts/src/systems/loot/: loot_box.cairo
contracts/src/tests/: comprehensive.cairo  setup.cairo  simple.cairo  test_component_layer.cairo  test_comprehensive.cairo  test_elements.cairo  test_error_conditions.cairo  test_events.cairo  test_game_features.cairo  test_game_lifecycle.cairo  test_helpers.cairo  test_inventory_behavior.cairo  test_inventory_features.cairo  test_level_mechanics.cairo  test_performance.cairo  test_security.cairo  test_simple.cairo  test_workflows.cairo  test_world.cairo  world.cairo
contracts/src/types/: action.cairo  action_types.cairo  boss.cairo  echelon.cairo  game.cairo  game_types.cairo  item_types.cairo  loot.cairo  mod.cairo
contracts/src/utils/: achievements.cairo  store.cairo  tasks.cairo  trophies.cairo
contracts/src/utils/tasks/: collector.cairo  fisherman.cairo  index.cairo  sunken_chest.cairo  wreck_guardian.cairo
contracts/src/utils/trophies/: collector.cairo  fisherman.cairo  index.cairo  sunken_chest.cairo  wreck_guardian.cairo
crates/bevy_dojo/: Cargo.toml
