[workspace.package]
name = "elysium_descent"
version = "0.0.1"
edition = "2024"
categories = ["game"]
description = "Elysium Descent is a roguelike game inspired by lootsurvivor built with Bevy and Dojo"
homepage = "https://realmofra.com"
authors = [
  "Okhai Omotuebe <okhaio@protonmail.com>"
]
keywords = ["game", "starknet", "bevy", "focg", "roguelike"]
repository = "https://github.com/realmofra/elysium_descent"

[workspace]
resolver = "2"
members = [
  "crates/bevy_dojo",
  "client/"
]
default-members = ["client/"]

[workspace.dependencies]
bevy = "0.16"
bevy_enhanced_input = "0.12.0"
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
