[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.3.1", features = ["debug-plugin"] }
bevy.workspace = true
bevy_asset_loader.workspace = true
bevy_enhanced_input.workspace = true
bevy_gltf_animation = "0.2.0"
bevy_kira_audio.workspace = true
bevy_lunex.workspace = true
log.workspace = true
once_cell = "1.21.3"
starknet.workspace = true
tracing.workspace = true

[lints]
workspace = true
