[package]
name = "bevy_dojo"
version.workspace = true
edition = "2024"

[dependencies]
bevy.workspace = true
bevy_enhanced_input.workspace = true
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log.workspace = true
starknet = "0.15.1"
tracing.workspace = true

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"
